Correction des extensions de fichier dans les exports et mise à jour de la configuration TypeScript

--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "extends": "@workspace/typescript-config/base.json",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "noEmit": true, // Requis lorsque allowImportingTsExtensions est activé
     "outDir": "./dist",
     "declaration": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
