Correction des chemins d'importation des fichiers TypeScript et suppression de Docker Compose

--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@workspace/typescript-config/base.json",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "noEmit": true, // Requis lorsque allowImportingTsExtensions est activé
     "outDir": "./dist",
     "declaration": true
   },
